--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -20,8 +20,18 @@ body {
     min-height: 100vh;
     font-family: $font-family;
     font-size: 3.2rem;
+    font-weight: $weight-regular;
     background-color: $main-bg1;
     color: $text-white1;
+}
+
+h1,
+h2, 
+h3,
+h4,
+h5,
+h6 {
+    font-weight: $weight-regular;
 }
 
 
