Added theme definitions
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,9 @@
-/* Base */
-@import "base/variables";
-@import "base/base";
+/* Abstracts */
+@import './abstracts/colors';
+@import './abstracts/fonts';
+@import './abstracts/typography';
+@import './abstracts/utilities';
 
-/* Layout */
-@import "calculator";
+/* Components */ 
+@import './components/layout';
+@import './components/calculator';
