--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -1,15 +1,11 @@
-/* Font Family */
-@import url('https://fonts.googleapis.com/css2?family=Spartan:wght@400;700&display=swap');
 
-/* Variables */
-
-//Theme 1
+/*Theme 1*/
 $main-bg1: hsl(222, 26%, 31%);
 $keypad-bg1: hsl(223, 31%, 20%); //keypad, toggle
 $toggle-bg1: hsl(223, 31%, 20%);
 $screen-bg1: hsl(224, 36%, 15%);
 
-  /* Keys*/
+/* Keys*/
 $delete-key-bg1: hsl(225, 21%, 49%); //Del and Reset
 $delete-key-shadow1: hsl(224, 28%, 35%);
 $reset-key-bg1: hsl(225, 21%, 49%); //Del and Reset
@@ -19,27 +15,30 @@ $equal-sign-shadow1: hsl(6, 70%, 34%); //Evaluate =
 $number-key-bg1: hsl(30, 25%, 89%); // Other keys
 $number-key-shadow1: hsl(28, 16%, 65%); // Other keys
 
-  /* Text */
+/* Text */
 $text-gray-theme1: hsl(221, 14%, 31%);
-$text-white-theme1: hsl(0, 0, 100%); 
+$text-white-theme1: hsl(0, 0, 100%);
 
 
 //Theme 2
 $main-bg2: hsl(0, 0%, 90%);
-$secondary-bg2: hsl(0, 5%, 81%); //keypad, toggle
+$keypad-bg2: hsl(0, 5%, 81%); //keypad, toggle
+$toggle-bg2: hsl(0, 5%, 81%);
 $screen-bg2: hsl(0, 0%, 93%); //screen
 
-  /* Keys*/
-$key-bg2: hsl(185, 42%, 37%); //Del and Reset
-$key-shadow2: hsl(185, 58%, 25%); //Del and Reset
-$key-orange-bg2: hsl(25, 98%, 40%); //Evaluate =
-$key-orange-shadow2: hsl(25, 99%, 27%); //Evaluate =
-$key-lt-gray-bg2: hsl(45, 7%, 89%); // Other keys
-$key-dk-gray-shadow2: hsl(35, 11%, 61%); // Other keys
+/* Keys*/
+$delete-key-bg2: hsl(185, 42%, 37%); //Del and Reset
+$delete-key-shadow2: hsl(185, 58%, 25%); //Del and Reset
+$reset-key-bg2: hsl(185, 42%, 37%);
+$reset-key-shadow2: hsl(185, 58%, 25%);
+$equal-sign-bg2: hsl(25, 98%, 40%); //Evaluate =
+$equal-sign-shadow2: hsl(25, 99%, 27%); //Evaluate =
+$number-key-bg2: hsl(45, 7%, 89%); // Other keys
+$number-key-shadow2: hsl(35, 11%, 61%); // Other keys
 
-  /* Text */
-$text-dk-gray2: hsl(60, 10%, 19%);
-$text-white2: hsl(0, 0, 100%);
+/* Text */
+$text-dk-gray-theme2: hsl(60, 10%, 19%);
+$text-white-theme2: hsl(0, 0, 100%);
 
 
 //Theme 3
@@ -58,15 +57,3 @@ $key-dk-magenta-shadow3: hsl(290, 70%, 36%); // Other keys
 $text-lt-yellow3: hsl(52, 100%, 62%);
 $text-dk-blue3: hsl(198, 20%, 13%);
 $text-white3: hsl(0, 0, 100%);
-
-
-//Font
-$font-family: 'Spartan', sans-serif;
-$weight-bold: 700;
-$weight-regular: 400;
-
-/* Breakpoints */
-$bp-mobile: 767px;
-$bp-tablet-start: 768px;
-$bp-table-end: 1024px;
-$bp-desktop: 1025px;
