--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -1,63 +1,63 @@
 
 /*Theme 1*/
-$main-bg1: hsl(222, 26%, 31%);
-$keypad-bg1: hsl(223, 31%, 20%); //keypad, toggle
-$toggle-bg1: hsl(223, 31%, 20%);
-$screen-bg1: hsl(224, 36%, 15%);
+$main-bg: hsl(222, 26%, 31%);
+$keypad-bg: hsl(223, 31%, 20%); //keypad, toggle
+$toggle-bg: hsl(223, 31%, 20%);
+$screen-bg: hsl(224, 36%, 15%);
 
 /* Keys*/
-$delete-key-bg1: hsl(225, 21%, 49%); //Del and Reset
-$delete-key-shadow1: hsl(224, 28%, 35%);
-$reset-key-bg1: hsl(225, 21%, 49%); //Del and Reset
-$reset-key-shadow1: hsl(224, 28%, 35%); //Del and Reset
-$equal-sign-bg1: hsl(6, 63%, 50%); //Evaluate =
-$equal-sign-shadow1: hsl(6, 70%, 34%); //Evaluate =
-$number-key-bg1: hsl(30, 25%, 89%); // Other keys
+$delete-key-bg: hsl(225, 21%, 49%); //Del and Reset
+$delete-key-shadow: hsl(224, 28%, 35%);
+$reset-key-bg: hsl(225, 21%, 49%); //Del and Reset
+$reset-key-shadow: hsl(224, 28%, 35%); //Del and Reset
+$equal-sign-bg: hsl(6, 63%, 50%); //Evaluate =
+$equal-sign-shadow: hsl(6, 70%, 34%); //Evaluate =
+$number-key-bg: hsl(30, 25%, 89%); // Other keys
 $number-key-shadow1: hsl(28, 16%, 65%); // Other keys
 
 /* Text */
-$text-gray-theme1: hsl(221, 14%, 31%);
-$text-white-theme1: hsl(0, 0, 100%);
+$text-dark: hsl(221, 14%, 31%);
+$text-white: hsl(0, 0, 100%);
 
 
 //Theme 2
-$main-bg2: hsl(0, 0%, 90%);
-$keypad-bg2: hsl(0, 5%, 81%); //keypad, toggle
-$toggle-bg2: hsl(0, 5%, 81%);
-$screen-bg2: hsl(0, 0%, 93%); //screen
+$main-bg: hsl(0, 0%, 90%);
+$keypad-bg: hsl(0, 5%, 81%); //keypad, toggle
+$toggle-bg: hsl(0, 5%, 81%);
+$screen-bg: hsl(0, 0%, 93%); //screen
 
 /* Keys*/
-$delete-key-bg2: hsl(185, 42%, 37%); //Del and Reset
-$delete-key-shadow2: hsl(185, 58%, 25%); //Del and Reset
-$reset-key-bg2: hsl(185, 42%, 37%);
-$reset-key-shadow2: hsl(185, 58%, 25%);
-$equal-sign-bg2: hsl(25, 98%, 40%); //Evaluate =
-$equal-sign-shadow2: hsl(25, 99%, 27%); //Evaluate =
-$number-key-bg2: hsl(45, 7%, 89%); // Other keys
-$number-key-shadow2: hsl(35, 11%, 61%); // Other keys
+$delete-key-bg: hsl(185, 42%, 37%); //Del and Reset
+$delete-key-shadow: hsl(185, 58%, 25%); //Del and Reset
+$reset-key-bg: hsl(185, 42%, 37%);
+$reset-key-shadow: hsl(185, 58%, 25%);
+$equal-sign-bg: hsl(25, 98%, 40%); //Evaluate =
+$equal-sign-shadow: hsl(25, 99%, 27%); //Evaluate =
+$number-key-bg: hsl(45, 7%, 89%); // Other keys
+$number-key-shadow: hsl(35, 11%, 61%); // Other keys
 
 /* Text */
-$text-dk-gray-theme2: hsl(60, 10%, 19%);
-$text-white-theme2: hsl(0, 0, 100%);
+$text-dark: hsl(60, 10%, 19%);
+$text-white: hsl(0, 0, 100%);
 
 
 //Theme 3
-$main-bg3: hsl(268, 75%, 9%);
-$keypad-bg3: hsl(268, 71%, 12%); //keypad, toggle, screen 
-$toggle-bg3: hsl(268, 71%, 12%);
-$screen-bg3: hsl(268, 71%, 12%);
+$main-bg: hsl(268, 75%, 9%);
+$keypad-bg: hsl(268, 71%, 12%); //keypad, toggle, screen 
+$toggle-bg: hsl(268, 71%, 12%);
+$screen-bg: hsl(268, 71%, 12%);
 
 /* Keys*/
-$delete-key-bg3: hsl(281, 89%, 26%); //Del and Reset
-$delete-key-shadow3: hsl(285, 91%, 52%); //Del and Reset
-$reset-key-bg3: hsl(281, 89%, 26%);
-$reset-key-shadow3: hsl(285, 91%, 52%);
-$equal-sign-bg3: hsl(176, 100%, 44%); //Evaluate =
-$equal-sign-shadow3: hsl(177, 92%, 70%); //Evaluate =
-$number-key-bg3: hsl(268, 47%, 21%); // Other keys
-$number-key-shadow3: hsl(290, 70%, 36%); // Other keys
+$delete-key-bg: hsl(281, 89%, 26%); //Del and Reset
+$delete-key-shadow: hsl(285, 91%, 52%); //Del and Reset
+$reset-key-bg: hsl(281, 89%, 26%);
+$reset-key-shadow: hsl(285, 91%, 52%);
+$equal-sign-bg: hsl(176, 100%, 44%); //Evaluate =
+$equal-sign-shadow: hsl(177, 92%, 70%); //Evaluate =
+$number-key-bg: hsl(268, 47%, 21%); // Other keys
+$number-key-shadow: hsl(290, 70%, 36%); // Other keys
 
 /* Text */
-$text-lt-yellow-theme3: hsl(52, 100%, 62%);
-$text-dk-blue-theme3: hsl(198, 20%, 13%);
-$text-white-theme3: hsl(0, 0, 100%);
+$text-light: hsl(52, 100%, 62%);
+$text-dark: hsl(198, 20%, 13%);
+$text-white: hsl(0, 0, 100%);
