--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -17,7 +17,7 @@ $number-key-shadow1: hsl(28, 16%, 65%); // Other keys
 
 /* Text */
 $text-dark1: hsl(221, 14%, 31%);
-$text-white1: hsl(0, 0, 100%);
+$text-white1: hsl(0, 0, 100%); //Reset and Del
 
 
 //Theme 2
@@ -38,7 +38,7 @@ $number-key-shadow2: hsl(35, 11%, 61%); // Other keys
 
 /* Text */
 $text-dark2: hsl(60, 10%, 19%);
-$text-white2: hsl(0, 0, 100%);
+$text-white2: hsl(0, 0, 100%); //Reset and Del
 
 
 //Theme 3
@@ -59,5 +59,5 @@ $number-key-shadow3: hsl(290, 70%, 36%); // Other keys
 
 /* Text */
 $text-light3: hsl(52, 100%, 62%);
+$text-white3: hsl(0, 0, 100%); //Reset and Del
 $text-dark3: hsl(198, 20%, 13%);
-$text-white3: hsl(0, 0, 100%);
