Added grid display and styling to keypad
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
 /* Abstracts */
 @import './abstracts/colors';
 @import './abstracts/fonts';
+@import './abstracts/mixin';
 @import './abstracts/typography';
 @import './abstracts/utilities';
 
