--- a/scss/abstracts/_utilities.scss
+++ b/scss/abstracts/_utilities.scss
@@ -1,5 +1,3 @@
 /* Breakpoints */
-$bp-mobile: 767px;
-$bp-tablet-start: 768px;
-$bp-table-end: 1024px;
-$bp-desktop: 1025px;
+$bp-mobile-tablet: 576px;
+$bp-tablet-desktop: 577px;
