--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -35,7 +35,7 @@ body.theme1 {
     --color-delete-key-bg: #{$delete-key-bg1};
     --color-delete-shadow: #{$delete-key-shadow1};
     --color-reset-key-bg: #{$reset-key-bg1};
-    --color-reset-shadow: #{$reset-key-shadow1} --color-equal-sign-bg: #{$equal-sign-bg1};
+    --color-reset-shadow: #{$reset-key-shadow1}; --color-equal-sign-bg: #{$equal-sign-bg1};
     --color-equal-sign-shadow: #{$equal-sign-shadow1};
     --color-number-key-bg: #{$number-key-bg1};
     --color-number-key-shadow: #{$number-key-shadow1};
@@ -57,7 +57,7 @@ body.theme2 {
     --color-delete-key-bg: #{$delete-key-bg2};
     --color-delete-shadow: #{$delete-key-shadow2};
     --color-reset-key-bg: #{$reset-key-bg2};
-    --color-reset-shadow: #{$reset-key-shadow2} --color-equal-sign-bg: #{$equal-sign-bg2};
+    --color-reset-shadow: #{$reset-key-shadow2}; --color-equal-sign-bg: #{$equal-sign-bg2};
     --color-equal-sign-shadow: #{$equal-sign-shadow2};
     --color-number-key-bg: #{$number-key-bg2};
     --color-number-key-shadow: #{$number-key-shadow2};
@@ -80,7 +80,7 @@ body.theme3 {
     --color-delete-key-bg: #{$delete-key-bg3};
     --color-delete-shadow: #{$delete-key-shadow3};
     --color-reset-key-bg: #{$reset-key-bg3};
-    --color-reset-shadow: #{$reset-key-shadow3} --color-equal-sign-bg: #{$equal-sign-bg3};
+    --color-reset-shadow: #{$reset-key-shadow3}; --color-equal-sign-bg: #{$equal-sign-bg3};
     --color-equal-sign-shadow: #{$equal-sign-shadow3};
     --color-number-key-bg: #{$number-key-bg3};
     --color-number-key-shadow: #{$number-key-shadow3};
@@ -96,5 +96,89 @@ body.theme3 {
 
 
 body  {
+    background-color: var(--color-page-bg);  
+}
+
+.main {
+    @include flex (column, center);
     background-color: var(--color-page-bg);
+    max-width: 100vw;
+    min-height: 100vh;
+}
+
+.calculator__container {
+    background-color: var(--color-page-bg);
+    max-width: 57rem;
+    width: 100%; 
+    margin: 0 auto;
+    @include flex (column, space-between);
+}
+
+/* Header */
+
+.calculator__header {
+    @media (max-width: $bp-mobile-tablet) {
+        width: 32.7rem;
+    }
+
+    @media (min-width: $bp-tablet-desktop) {
+        width: 54rem;
+    }
+
+    
+}
+
+/* Display */ 
+.display__container {
+    background-color: var(--color-screen-bg);
+    @media (max-width: $bp-mobile-tablet) {
+        width: 32.7rem;
+    }
+    @media (min-width: $bp-tablet-desktop) {
+        width: 54rem;
+    }
+
+    .calculator-screen {
+        background-color: var(--color-screen-bg);
+        @media (max-width: $bp-mobile-tablet) {
+            width: 32.7rem;
+        }
+
+        @media (min-width: $bp-tablet-desktop) {
+            width: 54rem;
+        }
+    }
+}
+
+/* Keypad */
+.calculator-keypad {
+    background-color: var(--color-screen-bg);
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-row-gap: 2rem;
+    grid-column-gap: 1rem;
+
+    @media (max-width: $bp-mobile-tablet) {
+        width: 32.7rem;
+        height: 42rem;
+    }
+
+    @media (min-width: $bp-tablet-desktop) {
+        width: 54rem;
+        height: 47.6rem;
+    }
+
+
+    .reset {
+        background-color: var(--color-reset-key-bg);
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+
+    .equal-sign {
+        background-color: var(--color-equal-sign-bg);
+        color: var(--third-text-color);
+        grid-column-start: 3;
+        grid-column-end: 5;
+    }
 }
