--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -148,25 +148,20 @@ body  {
 }
 
 /* Display */ 
-.display__container {
+input.calculator-screen {
     background-color: var(--color-screen-bg);
+    height: 8.5rem;
+    margin-bottom: 2.4rem;
+    border-radius: 1rem;
+
     @media (max-width: $bp-mobile-tablet) {
         width: 32.7rem;
+        align-self: center;
+        margin: 0 auto;
     }
+
     @media (min-width: $bp-tablet-desktop) {
         width: 54rem;
-    }
-
-    .calculator-screen {
-        background-color: var(--color-screen-bg);
-        color: var(--screen-text-color);
-        @media (max-width: $bp-mobile-tablet) {
-            width: 32.7rem;
-        }
-
-        @media (min-width: $bp-tablet-desktop) {
-            width: 54rem;
-        }
     }
 }
 
@@ -177,6 +172,8 @@ body  {
     grid-template-columns: repeat(4, 1fr);
     grid-row-gap: 2rem;
     grid-column-gap: 1rem;
+    padding: 2.4rem;
+    border-radius: 1rem;
 
     @media (max-width: $bp-mobile-tablet) {
         width: 32.7rem;
