--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -45,6 +45,7 @@ body.theme1 {
     --screen-text-color: #{$text-white1};
     --number-key-text-color: #{$text-dark1};
     --delete-reset-key-text-color: #{$text-white1};
+    
     --primary-text-color: #{$text-dark1};
     --secondary-text-color: #{$text-white1};
     --third-text-color: #{$text-white1};
@@ -71,7 +72,7 @@ body.theme2 {
     --screen-text-color: #{$text-dark2};
     --number-key-text-color: #{$text-dark2};
     --delete-reset-key-text-color: #{$text-white2};
-
+    
     --primary-text-color: #{$text-dark2};
     --secondary-text-color: #{$text-white2};
     --third-text-color: #{$text-white2};
@@ -150,18 +151,25 @@ body  {
 /* Display */ 
 input.calculator-screen {
     background-color: var(--color-screen-bg);
+    color: var(--screen-text-color);
+    border: none;
     height: 8.5rem;
     margin-bottom: 2.4rem;
+    padding: 1.6rem 1.4rem 1.2rem;
     border-radius: 1rem;
+    overflow: hidden;
+    font-size: 3.2rem;
+    font-weight: $weight-bold;
+    text-align: right;
 
     @media (max-width: $bp-mobile-tablet) {
         width: 32.7rem;
         align-self: center;
-        margin: 0 auto;
     }
 
     @media (min-width: $bp-tablet-desktop) {
         width: 54rem;
+        height: 12.5rem;
     }
 }
 
@@ -170,9 +178,9 @@ input.calculator-screen {
     background-color: var(--color-screen-bg);
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-row-gap: 2rem;
-    grid-column-gap: 1rem;
-    padding: 2.4rem;
+    grid-row-gap: 1rem;
+    grid-column-gap: 0.85rem;
+    padding: 2rem;
     border-radius: 1rem;
 
     @media (max-width: $bp-mobile-tablet) {
@@ -188,13 +196,16 @@ input.calculator-screen {
     .number-key {
         background-color: var(--color-number-key-bg);
         color: var(--number-key-text-color);
+        border: none;
+        border-radius: .5rem;
+        cursor: pointer;
         font-size: 2.5rem;
         font-weight: $weight-bold;
         text-transform: uppercase;
     }
 
     .function-key {
-        font-size: 2rem;
+        font-size: 1.5rem;
         font-weight: $weight-regular;
     }
 
