--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -133,6 +133,9 @@ body  {
 /* Header */
 
 .calculator__header {
+    @include flex (row, space-between);
+    height: 4.5rem;
+
     @media (max-width: $bp-mobile-tablet) {
         width: 32.7rem;
     }
@@ -142,9 +145,19 @@ body  {
     }
 
     .calculator-title {
+        width: 50%;
         color: var(--header-text-color);
     }
 
+    #toggle__container {
+        @include flex (row, space-between);
+        width: 15rem;
+        height: 4.5rem;
+    }
+
+    
+
+    
     
 }
 
@@ -154,7 +167,7 @@ input.calculator-screen {
     color: var(--screen-text-color);
     border: none;
     height: 8.5rem;
-    margin-bottom: 2.4rem;
+    margin: 2.4rem 0;
     padding: 1.6rem 1.4rem 1.2rem;
     border-radius: 1rem;
     overflow: hidden;
