--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -151,10 +151,42 @@ body  {
 
     #toggle__container {
         @include flex (row, space-between);
+        //align-items: baseline !important;
         width: 15rem;
         height: 4.5rem;
     }
 
+    .toggle-title {
+        color: var(--header-text-color);
+        text-transform: uppercase;
+        font-weight: $weight-regular;
+    }
+
+    .toggle-switch {
+        width: 7.2rem;
+        height: 4.5rem;
+        position: relative;
+        @include flex (row, center);
+    }
+
+    .toggle-switch label {
+        width: 100%;
+        height: 100%;
+        font-weight: $weight-bold;
+        color: var(--header-text-color);
+        text-align: center;
+        z-index: 5;
+        cursor: pointer;
+    }
+
+    .toggle-switch input {
+        opacity: 0;
+        position: absolute;
+        width: .1rem;
+        height: .1rem;
+    }
+
+    
     
 
     
