Update: Added toggle button styling
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -14,6 +14,8 @@ $equal-sign-bg1: hsl(6, 63%, 50%); //Evaluate =
 $equal-sign-shadow1: hsl(6, 70%, 34%); //Evaluate =
 $number-key-bg1: hsl(30, 25%, 89%); // Other keys
 $number-key-shadow1: hsl(28, 16%, 65%); // Other keys
+$toggle-switch-bg1: hsl(223, 31%, 20%);
+$toggle-btn-bg1: hsl(6, 63%, 50%);
 
 /* Text */
 $text-dark1: hsl(221, 14%, 31%);
@@ -35,6 +37,8 @@ $equal-sign-bg2: hsl(25, 98%, 40%); //Evaluate =
 $equal-sign-shadow2: hsl(25, 99%, 27%); //Evaluate =
 $number-key-bg2: hsl(45, 7%, 89%); // Other keys
 $number-key-shadow2: hsl(35, 11%, 61%); // Other keys
+$toggle-switch-bg2: hsl(0, 5%, 81%);
+$toggle-btn-bg2: hsl(25, 98%, 40%);
 
 /* Text */
 $text-dark2: hsl(60, 10%, 19%);
@@ -56,6 +60,8 @@ $equal-sign-bg3: hsl(176, 100%, 44%); //Evaluate =
 $equal-sign-shadow3: hsl(177, 92%, 70%); //Evaluate =
 $number-key-bg3: hsl(268, 47%, 21%); // Other keys
 $number-key-shadow3: hsl(290, 70%, 36%); // Other keys
+$toggle-switch-bg3: hsl(268, 71%, 12%);
+$toggle-btn-bg3: hsl(176, 100%, 44%);
 
 /* Text */
 $text-light3: hsl(52, 100%, 62%);
