--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -18,6 +18,8 @@
    --color-equal-sign-shadow: #{$equal-sign-shadow1};
    --color-number-key-bg: #{$number-key-bg1};
    --color-number-key-shadow: #{$number-key-shadow1};
+   --color-toggle-switch-bg: #{$toggle-switch-bg1};
+   --color-toggle-btn-bg: #{$toggle-btn-bg1};
 
    /* Text */
    --primary-text-color: #{$text-dark1};
@@ -39,13 +41,17 @@ body.theme1 {
     --color-equal-sign-shadow: #{$equal-sign-shadow1};
     --color-number-key-bg: #{$number-key-bg1};
     --color-number-key-shadow: #{$number-key-shadow1};
+    --color-toggle-switch-bg: #{$toggle-switch-bg1};
+    --color-toggle-btn-bg: #{$toggle-btn-bg1};
 
     /* Text */
     --header-text-color: #{$text-white1};
     --screen-text-color: #{$text-white1};
     --number-key-text-color: #{$text-dark1};
     --delete-reset-key-text-color: #{$text-white1};
-    
+    --footer-text-color: #{$text-white1};
+    --footer-link-color: #{$text-white1};
+
     --primary-text-color: #{$text-dark1};
     --secondary-text-color: #{$text-white1};
     --third-text-color: #{$text-white1};
@@ -66,13 +72,17 @@ body.theme2 {
     --color-equal-sign-shadow: #{$equal-sign-shadow2};
     --color-number-key-bg: #{$number-key-bg2};
     --color-number-key-shadow: #{$number-key-shadow2};
+    --color-toggle-switch-bg: #{$toggle-switch-bg2};
+    --color-toggle-btn-bg: #{$toggle-btn-bg2};
 
     /* Text */
     --header-text-color: #{$text-dark2};
     --screen-text-color: #{$text-dark2};
     --number-key-text-color: #{$text-dark2};
     --delete-reset-key-text-color: #{$text-white2};
-    
+    --footer-text-color: #{$text-dark2};
+    --footer-link-color: #{$text-dark2};
+
     --primary-text-color: #{$text-dark2};
     --secondary-text-color: #{$text-white2};
     --third-text-color: #{$text-white2};
@@ -94,12 +104,16 @@ body.theme3 {
     --color-equal-sign-shadow: #{$equal-sign-shadow3};
     --color-number-key-bg: #{$number-key-bg3};
     --color-number-key-shadow: #{$number-key-shadow3};
+    --color-toggle-switch-bg: #{$toggle-switch-bg3};
+    --color-toggle-btn-bg: #{$toggle-btn-bg3};
 
     /* Text */
     --header-text-color: #{$text-light3};
     --screen-text-color: #{$text-light3};
     --number-key-text-color: #{$text-light3};
     --delete-reset-key-text-color: #{$text-white3};
+    --footer-text-color: #{$text-light3}; 
+    --footer-link-color: #{$text-light3};
 
     --primary-text-color: #{$text-light3};
     --secondary-text-color: #{$text-white3};
@@ -162,6 +176,8 @@ body  {
         color: var(--header-text-color);
         text-transform: uppercase;
         font-weight: $weight-regular;
+        align-self: flex-end;
+        padding-bottom: .3rem;
     }
 
     .toggle-switch {
@@ -174,6 +190,7 @@ body  {
     .toggle-switch label {
         width: 100%;
         height: 100%;
+        padding: .2rem;
         font-weight: $weight-bold;
         color: var(--header-text-color);
         text-align: center;
@@ -188,6 +205,38 @@ body  {
         height: .1rem;
     }
 
+    .toggle {
+        position: absolute;
+        bottom: 0; 
+        width: 100%;
+        left: 0;
+        height: 2.5rem;
+        border-radius: 3rem;
+        background-color: var(--color-toggle-switch-bg);
+    }
+
+    .toggle::after {
+        content: '';
+        position: absolute;
+        width: 1.6rem;
+        height: 1.6rem;
+        background-color: var(--color-toggle-btn-bg);
+        border-radius: 50%;
+        top: .5rem;
+        transform: translateX(-5px);
+    }
+
+    .toggle-switch input:nth-of-type(1):checked ~ .toggle::after {
+        left: .8rem;
+    }
+
+    .toggle-switch input:nth-of-type(2):checked ~ .toggle::after {
+        left: calc(50% - .4rem);
+    }
+
+    .toggle-switch input:nth-of-type(3):checked ~ .toggle::after {
+        left: calc(100% - 1.5rem);
+    }
     
     
 
@@ -277,4 +326,24 @@ input.calculator-screen {
 
     
     
+}
+
+
+footer {
+    height: 5rem;
+    margin-top: 2rem;
+    color: var(--footer-text-color);
+}
+
+
+
+
+/* Attribution */
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
+
+.attribution a {
+    color: var(--footer-link-color);
 }
