--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -275,8 +275,8 @@ input.calculator-screen {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-row-gap: 1rem;
-    grid-column-gap: 0.85rem;
-    padding: 2rem;
+    grid-column-gap: 1.5rem;
+    padding: 2.5rem;
     border-radius: 1rem;
 
     @media (max-width: $bp-mobile-tablet) {
@@ -287,17 +287,20 @@ input.calculator-screen {
     @media (min-width: $bp-tablet-desktop) {
         width: 54rem;
         height: 47.6rem;
+        grid-column-gap: 3rem;
     }
 
     .number-key {
         background-color: var(--color-number-key-bg);
         color: var(--number-key-text-color);
         border: none;
-        border-radius: .5rem;
+        border-radius: .75rem;
         cursor: pointer;
         font-size: 2.5rem;
         font-weight: $weight-bold;
         text-transform: uppercase;
+        box-shadow: 0px 4px 0px 0px var(--color-number-key-shadow);
+        
     }
 
     .function-key {
@@ -315,6 +318,8 @@ input.calculator-screen {
         color: var(--delete-reset-key-text-color);
         grid-column-start: 1;
         grid-column-end: 3;
+        margin-top: 0.5rem;
+        box-shadow: 0px 4px 0px 0px var(--color-reset-shadow);
     }
 
     .equal-sign {
@@ -322,6 +327,8 @@ input.calculator-screen {
         color: var(--third-text-color);
         grid-column-start: 3;
         grid-column-end: 5;
+        margin-top: 0.5rem;
+        box-shadow: 0px 4px 0px 0px var(--color-equal-sign-shadow);
     }
 
     
