--- a/scss/abstracts/_utilities.scss
+++ b/scss/abstracts/_utilities.scss
@@ -1,4 +1,5 @@
 /* Breakpoints */
-$bp-xs-mobile: 575px;
-$bp-mobile-tablet: 576px;
-$bp-tablet-desktop: 577px;
+$bp-sm-mobile: 576px; // <576px 
+$bp-tablet-start: 577px;
+$bp-tablet-end: 768px; 
+$bp-tablet-desktop-start: 769px;
