Update: adjusting size on small mobile
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/scss/abstracts/_utilities.scss
+++ b/scss/abstracts/_utilities.scss
@@ -2,4 +2,4 @@
 $bp-sm-mobile: 576px; // <576px 
 $bp-tablet-start: 577px;
 $bp-tablet-end: 768px; 
-$bp-tablet-desktop-start: 769px;
+$bp-desktop-start: 769px;
