--- a/scss/abstracts/_utilities.scss
+++ b/scss/abstracts/_utilities.scss
@@ -1,5 +1,5 @@
 /* Breakpoints */
-$bp-sm-mobile: 576px; // <576px 
+$bp-mobile: 576px; // <576px
 $bp-tablet-start: 577px;
 $bp-tablet-end: 768px; 
 $bp-desktop-start: 769px;
