--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -143,7 +143,6 @@ body  {
     margin: 0 auto;
     @include flex (column, space-between);
 
-
 }
 
 /* Header */
@@ -154,7 +153,7 @@ body  {
     width: 100%;
     padding: 0 2.4rem;
     
-   /* @media screen and (max-width: $bp-mobile) {
+    /*@media screen and (max-width: $bp-mobile) {
         width: 30rem;
     }*/
 
@@ -172,7 +171,7 @@ body  {
     }
 
     #toggle__container {
-        @include flex (row, space-between);
+        @include flex (row, flex-end);
         //align-items: baseline !important;
         width: 50%;
         height: 4.5rem;
@@ -191,7 +190,7 @@ body  {
         width: 7.2rem;
         height: 4.5rem;
         position: relative;
-        @include flex (row, center);
+        @include flex (row, flex-end);
     }
 
     .toggle-switch label {
@@ -345,7 +344,7 @@ input.calculator-screen {
 
 
 footer {
-    height: 5rem;
+    height: 7rem;
     margin-top: 2rem;
     color: var(--footer-text-color);
 }
@@ -356,6 +355,7 @@ footer {
 /* Attribution */
 .attribution {
     font-size: 11px;
+    line-height: 28px;
     text-align: center;
     padding: 0 2.4rem;
 }
