Update: Trying new script for calculator
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -275,7 +275,7 @@ body  {
 }
 
 /* Display */ 
-input.calculator-screen {
+.calculator-screen {
     background-color: var(--color-screen-bg);
     color: var(--screen-text-color);
     border: none;
