--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -318,12 +318,12 @@ body  {
 
 }
 
-.output .previous-operand {
+.previous-operand {
     color: var(--screen-text-color);
     font-size: 1.5rem;
 }
 
-.output .current-operand {
+.current-operand {
     color: var(--screen-text-color);
     font-size: 2.5rem;
 }
