--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -4,6 +4,9 @@ $main-bg1: hsl(222, 26%, 31%);
 $keypad-bg1: hsl(223, 31%, 20%); //keypad, toggle
 $toggle-bg1: hsl(223, 31%, 20%);
 $screen-bg1: hsl(224, 36%, 15%);
+$screen-outline1: hsl(221, 10%, 51%);
+$keypad-outline1: hsl(221, 10%, 51%);
+$toggle-outline1: hsl(221, 10%, 51%);
 
 /* Keys*/
 $delete-key-bg1: hsl(225, 21%, 49%); //Del and Reset
@@ -31,6 +34,9 @@ $main-bg2: hsl(0, 0%, 90%);
 $keypad-bg2: hsl(0, 5%, 81%); //keypad, toggle
 $toggle-bg2: hsl(0, 5%, 81%);
 $screen-bg2: hsl(0, 0%, 93%); //screen
+$screen-outline2: hsl(185, 58%, 25%);
+$keypad-outline2: hsl(185, 58%, 25%);
+$toggle-outline2: hsl(185, 58%, 25%);
 
 /* Keys*/
 $delete-key-bg2: hsl(185, 42%, 37%); //Del and Reset
@@ -58,7 +64,9 @@ $main-bg3: hsl(268, 75%, 9%);
 $keypad-bg3: hsl(268, 71%, 12%); //keypad, toggle, screen 
 $toggle-bg3: hsl(268, 71%, 12%);
 $screen-bg3: hsl(268, 71%, 12%);
-
+$screen-outline3: hsl(281, 89%, 26%);
+$keypad-outline3: hsl(281, 89%, 26%);
+$toggle-outline3: hsl(281, 89%, 26%);
 /* Keys*/
 $delete-key-bg3: hsl(281, 89%, 26%); //Del and Reset
 $delete-key-hover3: hsl(281, 73%, 40%);
