--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -8,6 +8,9 @@
    --color-keypad-bg: #{$keypad-bg1};
    --color-toggle-bg: #{$toggle-bg1};
    --color-screen-bg: #{$screen-bg1};
+   --color-screen-outline: #{$screen-outline1};
+   --color-keypad-outline: #{$keypad-outline1};
+   --color-toggle-outline: #{$toggle-outline1};
 
    /* Keys */
    --color-delete-key-bg: #{$delete-key-bg1};
@@ -37,6 +40,9 @@ body.theme1 {
     --color-keypad-bg: #{$keypad-bg1};
     --color-toggle-bg: #{$toggle-bg1};
     --color-screen-bg: #{$screen-bg1};
+    --color-screen-outline: #{$screen-outline1};
+    --color-keypad-outline: #{$keypad-outline1};
+    --color-toggle-outline: #{$toggle-outline1};
 
     /* Keys */
     --color-delete-key-bg: #{$delete-key-bg1};
@@ -72,6 +78,9 @@ body.theme2 {
     --color-keypad-bg: #{$keypad-bg2};
     --color-toggle-bg: #{$toggle-bg2};
     --color-screen-bg: #{$screen-bg2};
+    --color-screen-outline: #{$screen-outline2};
+    --color-keypad-outline: #{$keypad-outline2};
+    --color-toggle-outline: #{$toggle-outline2};
 
     /* Keys */
     --color-delete-key-bg: #{$delete-key-bg2};
@@ -108,6 +117,9 @@ body.theme3 {
     --color-keypad-bg: #{$keypad-bg3};
     --color-toggle-bg: #{$toggle-bg3};
     --color-screen-bg: #{$screen-bg3};
+    --color-screen-outline: #{$screen-outline3};
+    --color-keypad-outline: #{$keypad-outline3};
+    --color-toggle-outline: #{$toggle-outline3};
 
     /* Keys */
     --color-delete-key-bg: #{$delete-key-bg3};
@@ -187,6 +199,7 @@ body  {
     .calculator-title {
         width: 50%;
         color: var(--header-text-color);
+        padding-top: 1.2rem;
 
         @media (max-width: $bp-mobile) {
             margin-left: 2.5rem;
@@ -210,7 +223,7 @@ body  {
         text-transform: uppercase;
         font-weight: $weight-regular;
         align-self: flex-end;
-        padding-bottom: .3rem;
+        padding-bottom: .4rem;
         padding-right: 2.5rem;
     }
 
@@ -237,6 +250,7 @@ body  {
         position: absolute;
         width: .1rem;
         height: .1rem;
+        
     }
 
     .toggle {
@@ -247,6 +261,7 @@ body  {
         height: 2.5rem;
         border-radius: 3rem;
         background-color: var(--color-toggle-switch-bg);
+        border: 1px solid var(--color-toggle-outline);
     }
 
     .toggle::after {
@@ -256,7 +271,7 @@ body  {
         height: 1.6rem;
         background-color: var(--color-toggle-btn-bg);
         border-radius: 50%;
-        top: .5rem;
+        top: .25rem;
         transform: translateX(-5px);
     }
 
@@ -278,13 +293,6 @@ body  {
 /*
 .calculator-screen */
  .output {
-    /*display: grid;
-    row-gap: 0.5rem;
-    grid-area: output;
-    grid-template-areas: "previous-operand"
-    "current-operand";
-    grid-template-rows: repeat(2, 1fr);
-    overflow-x: hidden;*/
     grid-column: 1/-1;
     display: flex;
     align-items: flex-end;
@@ -292,14 +300,12 @@ body  {
     flex-direction: column;
     background-color: var(--color-screen-bg);
     color: var(--screen-text-color);
-    border: none;
+    border: 1px solid var(--color-screen-outline);
     width: 87%;
     height: 8.5rem;
     margin: 2.4rem;
     padding: 1.6rem 3.4rem 1.2rem;
     border-radius: 1rem;
-    //font-size: 3.2rem;
-    //font-weight: $weight-bold;
     text-align: right;
     word-wrap: break-word;
     word-break: break-all;
@@ -337,6 +343,7 @@ body  {
     padding: 2.5rem;
     border-radius: 1rem;
     width: 87%;
+    border: 1px solid var(--color-keypad-outline);
     
     @media (max-width: $bp-mobile) {
         height: 42rem;
