Update: adjusted padding
Signed-off-by: T. Lanette <TLPollard4516@gmail.com>

--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -349,6 +349,7 @@ body  {
         height: 42rem;
         grid-row-gap: 1rem;
         grid-column-gap: 1.5rem;
+        padding-top: 3rem;
         
     }
 
@@ -363,6 +364,7 @@ body  {
         width: 54rem;
         height: 47.6rem;
         grid-column-gap: 3rem;
+        padding-top: 4.5rem;
     }
 
     .number-key {
