--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -50,7 +50,8 @@ body.theme1 {
     --color-delete-shadow: #{$delete-key-shadow1};
     --color-reset-key-bg: #{$reset-key-bg1};
     --cover-reset-key-hover: #{$reset-key-hover1};
-    --color-reset-shadow: #{$reset-key-shadow1}; --color-equal-sign-bg: #{$equal-sign-bg1};
+    --color-reset-shadow: #{$reset-key-shadow1}; 
+    --color-equal-sign-bg: #{$equal-sign-bg1};
     --color-equal-sign-hover: #{$equal-sign-hover1};
     --color-equal-sign-shadow: #{$equal-sign-shadow1};
     --color-number-key-bg: #{$number-key-bg1};
@@ -88,7 +89,8 @@ body.theme2 {
     --color-delete-shadow: #{$delete-key-shadow2};
     --color-reset-key-bg: #{$reset-key-bg2};
     --cover-reset-key-hover: #{$reset-key-hover2};
-    --color-reset-shadow: #{$reset-key-shadow2}; --color-equal-sign-bg: #{$equal-sign-bg2};
+    --color-reset-shadow: #{$reset-key-shadow2}; 
+    --color-equal-sign-bg: #{$equal-sign-bg2};
     --color-equal-sign-hover: #{$equal-sign-hover2};
     --color-equal-sign-shadow: #{$equal-sign-shadow2};
     --color-number-key-bg: #{$number-key-bg2};
@@ -127,7 +129,8 @@ body.theme3 {
     --color-delete-shadow: #{$delete-key-shadow3};
     --color-reset-key-bg: #{$reset-key-bg3};
     --cover-reset-key-hover: #{$reset-key-hover3};
-    --color-reset-shadow: #{$reset-key-shadow3}; --color-equal-sign-bg: #{$equal-sign-bg3};
+    --color-reset-shadow: #{$reset-key-shadow3}; 
+    --color-equal-sign-bg: #{$equal-sign-bg3};
     --color-equal-sign-hover: #{$equal-sign-hover3};
     --color-equal-sign-shadow: #{$equal-sign-shadow3};
     --color-number-key-bg: #{$number-key-bg3};
@@ -198,7 +201,7 @@ body  {
         width: 50%;
         color: var(--header-text-color);
         padding-top: 1.2rem;
-        font-size: 1rem !important;
+        font-size: 1em !important;
 
         @media (max-width: $bp-mobile) {
             margin-left: 2.5rem;
