--- a/scss/components/_calculator.scss
+++ b/scss/components/_calculator.scss
@@ -197,7 +197,7 @@ body  {
         width: 50%;
         color: var(--header-text-color);
         padding-top: 1.2rem;
-        font-size: 2rem;
+        font-size: 1rem !important;
 
         @media (max-width: $bp-mobile) {
             margin-left: 2.5rem;
